--- a/css/services.css
+++ b/css/services.css
@@ -17,10 +17,10 @@
     margin-top: 40px;
     padding: 5px 25px;
   }
-  .main-col1 {
+  .main-col2 {
     display: none !important;
   }
-  .main-col2 {
+  .main-col1 {
     width: 90vw;
     height: 300px;
     display: block;
@@ -119,6 +119,22 @@
     line-height: 1.2;
     letter-spacing: 1.4px;
   }
+
+  .carousel-item {
+    height: 40vh;
+    min-height: 300px;
+    background: no-repeat center center scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+  .carousel-indicators li {
+    height: 2px;
+    width: 15px;
+    margin: 0 10px;
+    background: #000000;
+  }
 }
 
 @media only screen and (min-width: 321px) and (max-width: 375px) {
@@ -151,10 +167,10 @@
     line-height: 1.2;
     letter-spacing: 1.4px;
   }
-  .main-col1 {
+  .main-col2 {
     display: none !important;
   }
-  .main-col2 {
+  .main-col1 {
     width: 90vw;
     height: 300px;
     display: block;
@@ -211,6 +227,21 @@
     text-align: center;
     display: block;
   }
+  .carousel-item {
+    height: 45vh;
+    min-height: 300px;
+    background: no-repeat center center scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+  .carousel-indicators li {
+    height: 2px;
+    width: 15px;
+    margin: 0 10px;
+    background: #000000;
+  }
 }
 
 @media only screen and (min-width: 376px) and (max-width: 425px) {
@@ -241,10 +272,10 @@
     line-height: 1.2;
     letter-spacing: 1.4px;
   }
-  .main-col1 {
+  .main-col2 {
     display: none !important;
   }
-  .main-col2 {
+  .main-col1 {
     width: 90vw;
     height: 300px;
     display: block;
@@ -254,6 +285,9 @@
     height: 200px;
     text-align: center;
     display: block;
+  }
+  #gym {
+    margin-top: 120px;
   }
   .gym-col1 {
     display: none !important;
@@ -298,6 +332,21 @@
     height: 200px;
     text-align: center;
     display: block;
+  }
+  .carousel-item {
+    height: 50vh;
+    min-height: 300px;
+    background: no-repeat center center scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+  .carousel-indicators li {
+    height: 2px;
+    width: 15px;
+    margin: 0 10px;
+    background: #000000;
   }
 }
 
@@ -329,10 +378,10 @@
     line-height: 1.2;
     letter-spacing: 1.4px;
   }
-  .main-col1 {
+  .main-col2 {
     display: none !important;
   }
-  .main-col2 {
+  .main-col1 {
     width: 90vw;
     height: 300px;
     display: block;
@@ -342,6 +391,9 @@
     height: 200px;
     text-align: center;
     display: block;
+  }
+  #gym {
+    margin-top: 150px;
   }
   .gym-col1 {
     display: none !important;
@@ -386,6 +438,21 @@
     height: 200px;
     text-align: center;
     display: block;
+  }
+  .carousel-item {
+    height: 60vh;
+    min-height: 300px;
+    background: no-repeat center center scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+  .carousel-indicators li {
+    height: 2px;
+    width: 15px;
+    margin: 0 10px;
+    background: #000000;
   }
 }
 
@@ -552,5 +619,20 @@
   .breakfast-col3 p {
     margin: 60px auto;
     font-size: 1.2rem;
+  }
+  .carousel-item {
+    height: 70vh;
+    min-height: 300px;
+    background: no-repeat center center scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+  .carousel-indicators li {
+    height: 5px;
+    width: 15px;
+    margin: 0 10px;
+    background: #000000;
   }
 }
